<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/et_horizontal_spacing"
            android:layout_marginRight="@dimen/et_horizontal_spacing"
            android:autofillHints="Customer Email"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/et_horizontal_spacing"
            android:layout_marginTop="@dimen/et_vertical_spacing"
            android:layout_marginRight="@dimen/et_horizontal_spacing"
            android:autofillHints="Password"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/loginBtnConstraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginBtnConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/et_horizontal_spacing"
            android:layout_marginRight="@dimen/et_horizontal_spacing"
            android:layout_marginTop="@dimen/et_vertical_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:layout_constraintBottom_toTopOf="@id/tvVendorLogin"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="onLoginBtnClicked"
                    android:text="@string/login_button_text" />

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvVendorLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vendor_sign_in_text"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onVendorLoginTextClicked"
            android:layout_marginTop="@dimen/et_vertical_spacing"
            app:layout_constraintBottom_toTopOf="@id/tvRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtnConstraintLayout" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_button_text"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onRegisterTextClicked"
            android:layout_marginTop="@dimen/et_vertical_spacing"
            android:layout_marginBottom="@dimen/login_bottom_distance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvVendorLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
